update currency struct and add api getPriceByCurrency
